--- a/templates/package.json
+++ b/templates/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@codemirror/lang-go": "^6.0.0",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-python": "^6.1.4",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@he-tree/vue3": "^1.2.9",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "codemirror": "^6.0.1",
     "core-js": "^3.8.3",
     "helper-js": "^3.0.0",
     "socket.io": "^4.5.0",
