--- a/templates/.env.production
+++ b/templates/.env.production
@@ -1,1 +1,2 @@
 VUE_APP_LAMBDA_CLONE_API=https://lambda-clone-api.dev-doe.com
+VUE_APP_LAMBDA_CLONE_ENDPOINT_API=http://lambda-clone-endpoint.dev-doe.com
